			   XPCE ChangeLog
			   ==============

* FIXED: Bug#113: ERROR: - ->initialise: Argument 1 (left): `expression'
  expected, found `Unexpected ` in PceEmacs on some errors in Prolog mode
  (Hugo Ferreira).

* FIXED: Bug#117: PceEmacs to confirm overwrite when writing to	a `save_file'.
  Extended `file_item->exists' for this purpose (Hugo Ferreira).

* FIXED: Bug#111: date(0,0,0,1,1,1970).  Fabien Todescato.  See documentation
  of date->set for details.

VERSION 6.2.11, distributed with SWI-Prolog 5.2.11
==================================================

* ENHANCED: pullright menu handling.

* MODIFIED/FIXED: `node<-contained_in' now fails if the node is not
  contained in a tree (rather than returning the incorrect @nil).

* ADDED: library(url_image) providing class url_image.

* ADDED: library(scaledbitmap) providing class scaled_bitmap.

* FIXED: Bug#104: PceEmacs find-file `Browse' to use Open rather than Save
  (actually not good, but MS-Windows cannot browse for Open or Save file at
  the same time).  Holger Kanwischer.


VERSION 6.2.10, distributed with SWI-Prolog 5.2.10
==================================================

* FIXED: Bug#102: focus handling problems in combo box.  Holger Kanwischer.

* ADDED: library(pce_grapher) to support creating and managing simple Prolog
  graphs.  Especially useful for educational purposes.

* ADDED: extra argument to `graphical->layout' to extend existing graphs.
  (incremental layout).

* ADDED: library(pce_tagged_connection): allow ->tag: @nil to remove the
  associated tag.

* ADDED: `graphical <-connected' and use message passing in
  `graphical <-layout' to find out about connected graphicals.

* FIXED: Bug#103: Error loading XPCE on MS-Windows when compiled for single
  threading.  Holger Kanwischer.

* FIXED: Bug#101: @finder<-file using a specified default file (MS-Windows
  version).  Laurens van der Meij.


VERSION 6.2.9, distributed with SWI-Prolog 5.2.9
================================================
