@@ -1,6 +1,9 @@
 			   XPCE ChangeLog
 			   ==============
 
+* FIXED: Avoid excessive amount amount of ->report: status, '' from
+  keybinding (Laurens van der Meij).
+
 * FIXED: Bug#113: ERROR: - ->initialise: Argument 1 (left): `expression'
   expected, found `Unexpected ` in PceEmacs on some errors in Prolog mode
   (Hugo Ferreira).
@@ -10,6 +13,7 @@
 
 * FIXED: Bug#111: date(0,0,0,1,1,1970).  Fabien Todescato.  See documentation
   of date->set for details.
+
 
 VERSION 6.2.11, distributed with SWI-Prolog 5.2.11
 ==================================================
